
Change Log Update (00.00.26)
* 2016-03-24
+ Created global prompt that are shared system wide, they are accessed via the communicator object
  for easy of use and access, global prompt keys are created in the data/structures file
  while each module with have it's specific in their own mod_xxx.hpp file.

Change Log Update (00.00.25)
* 2016-03-24
+ mod_logon now has the initial read/write of module specific text prompts
  basic setup will check on creation of class if file exists, if not it will create
  with defaults.  The Module will load each prompt file on startup so to minimize disk i/o
  when grabbing different prompts throughout the lifetime of the object.
- Should create a global text prompt handler as well.  Things like Pause, or hit a key
  and other misc text prompts should not be duplicated across modules.
  
Change Log Update (00.00.24)
* 2016-03-24
+ Created new text_prompt_dao to handle reading and writing prompts for all modules
+ Each module with have it's own short and simple prompt file, this is a general
  template to handle all modules

Change Log Update (00.00.23)
* 2016-03-23
+ Realigned the state code files to standard naming convention

Change Log Update (00.00.22)
* 2016-03-23
+ Renamed Broad_Caster to Session_Manager to better describe what it does.
+ Various cleanup and re-organization.
+ Also removed directory_bbs from config, the main root folder will always 
  be detected from where the executable is launched.

Change Log Update (00.00.21)
* 2016-03-23
+ Moved OBV/2 DAO's to compat sub folder to separate data access to original OBV/2 data files vs
  the current new data access objects.
+ These functions will be used later on for writing conversions.

Change Log Update (00.00.20)
* 2016-03-23
+ Created new Model sub folder to separate structures from data access objects.
+ Updated all files to the new model path
+ Added NewUserApplication stub for ModLogin 